@@ -2,6 +2,7 @@
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
 // creates hidden helpers for each breakpoint
+//      .hidden-sm {...}
 //      .hidden-sm-up {...}
 //      .hidden-sm-down {...}
 
@@ -13,6 +14,11 @@
     }
     .hidden-#{$bp}-down {
         @include media-breakpoint-down($bp) {
+            display: none !important;
+        }
+    }
+    .hidden-#{$bp} {
+        @include media-breakpoint-only($bp) {
             display: none !important;
         }
     }
